2016-02-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Rest_Runs.pl: Fix for Report/json.pm fix

2016-02-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: fix for last dle span two tapes
	* device-src/vfs-device.c: Add a SLOW-WRITE property (for testing)
	* device-src/vfs-device.h: Add a SLOW-WRITE property (for testing)
	* installcheck/Installcheck/Config.pm (rm_param): New fucntion
	* installcheck/Installcheck/Run.pm (clean_taperoot: New function
	* installcheck/Makefile.am: Add tape_action
	* installcheck/tape_action.pl: New installcheck script to check the
	  tape_action function

2016-02-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Micheal Burk
	* perl/Amanda/Report/json.pm: fixup

2016-02-25  Jean-Louis Martineau <martineau@zmanda.com>
	* all files: Update copyright notice

2016-02-24  Jean-Louis Martineau <martineau@zmanda.com>
	* config/libtool.m4: Fix for x86_64
	* contrib/libtool-for-x86_64.diff: Copy of the patch

2016-02-22  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amstatus.pl: Test number printing
	* installcheck/Makefile.am: Add catalogs/number.cat
	* installcheck/catalogs/number.cat: New catalog file for testing
	  number

2016-02-22  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Give and error if MAX-RECV-SPEED or
	  MAX-SEND-SPEED is below 5120.
	* man/xml-source/amanda-devices.7.xml: Document the minimum value for
	  MAX-RECV-SPEED and MAX-SEND-SPEED

2016-02-22  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-security.conf.5.xml: Document permissions

2016-02-17  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Add SERVICE_AMBACKUPD
	* client-src/Makefile.am: Add ambackup
	* client-src/ambackup.pl: New client program to start a backup
	* man/Makefile.am: Add ambackup.8
	* man/xml-source/ambackup.8.xml: New man page
	* perl/Amanda/Logfile.swg: Add P_AMBACKUPD