@@ -17,7 +17,7 @@
 # Contact information: Carbonite Inc., 756 N Pastoria Ave
 # Sunnyvale, CA 94086, USA, or: http://www.zmanda.com
 
-use Test::More tests => 11;
+use Test::More tests => 12;
 use File::Path;
 use Data::Dumper;
 use strict;
@@ -418,6 +418,36 @@ $storage->quit();
 rmtree($taperoot);
 unlink($tapelist_filename);
 
+# test do not use no-reuse with a datestamp of 0
+reset_taperoot(5);
+$tapelist->clear_tapelist();
+$tapelist->write();
+label_slot(1, "TEST-1", "X", "no-reuse", 1);
+label_slot(2, "TEST-2", "X", "no-reuse", 1);
+label_slot(3, "TEST-3", "X", "reuse", 1);
+label_slot(4, "TEST-4", "X", "no-reuse", 1);
+label_slot(4, "TEST-5", "X", "no-reuse", 1);
+
+$storage = Amanda::Storage->new(storage_name => "disk", tapelist => $tapelist);
+$chg = $storage->{'chg'};
+set_current_slot($chg, 1);
+
+$taperscan = Amanda::Taper::Scan->new(
+    tapelist  => $tapelist,
+    algorithm => "traditional",
+    tapecycle => 2,
+    tapecycle => 1,
+    storage => $storage);
+@results = run_scan($taperscan);
+is_deeply([ @results ],
+         [ undef, "TEST-3", $ACCESS_WRITE ],
+         "skips a no-reuse volume")
+         or diag(Dumper(\@results));
+$taperscan->quit();
+
+rmtree($taperoot);
+unlink($tapelist);
+
 # test invalid because slot loaded in invalid drive
 my $chg_state_file = "$Installcheck::TMP/chg-robot-state";
 unlink($chg_state_file) if -f $chg_state_file;
@@ -537,6 +567,9 @@ sub test_robot {
 
 test_robot(\&Amanda::MainLoop::quit);
 Amanda::MainLoop::run();
+
+rmtree($taperoot);
+unlink($tapelist);
 
 unlink($chg_state_file) if -f $chg_state_file;
 unlink($mtx_state_file) if -f $mtx_state_file;
